Fix missing data

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -72,9 +72,54 @@ message("5-minute interval with max average of steps: ", max_avg_steps)
 
 ```
 
-
 ## Imputing missing values
+```{r}
+# Total number of missing values in the dataset
+total_na <- apply(is.na(activity), 2, sum) %>%
+  sum()
+message("Total NA's: ", total_na)
 
 
+# Devise a strategy for filling in all of the missing values in the dataset.
+# Strategy: replace NA's with the mean for that 5-minute interval
+missing_data <- activity %>%
+  filter(is.na(.)) %>%
+  select(-steps) %>%
+  inner_join(mean_steps_interval, by = "interval")
+head(missing_data)
 
+
+## Create a new dataset that is equal to the original dataset but with the missing data filled in
+clean_activity <- activity
+clean_activity$steps[is.na(clean_activity$steps)] <- missing_data$steps
+head(clean_activity)
+
+# Make a histogram of the total number of steps taken each day and Calculate 
+# and report the mean and median total number of steps taken per day. Do these 
+# values differ from the estimates from the first part of the assignment? What 
+# is the impact of imputing missing data on the estimates of the total daily 
+# number of steps?
+clean_steps_by_date <- clean_activity %>%
+  group_by(date) %>%
+  summarise(steps = sum(steps, na.rm = TRUE), .groups = "drop")
+
+ggplot(clean_steps_by_date, aes(x = steps)) +
+  geom_histogram(bins = 10) +
+  geom_vline(aes(xintercept = mean(steps), color = "Mean")) +
+  geom_vline(aes(xintercept = median(steps), color = "Median"),
+             linetype = "dashed")+
+  labs(x = "Number of steps in one day",
+       y = "Frequency",
+       title = "Total number of steps taken per day") + 
+  theme(plot.title = element_text(hjust = 0.5)) +
+  scale_color_manual(name = "Legend", 
+                     values = c(Median = "green", Mean = "red"))
+
+
+# Mean and median in console
+# The mean and median are different from the first plot after cleaning the 
+# data, as both now have the same value
+message("Mean: ", mean(clean_steps_by_date$steps), 
+        "\nMedian: ", median(clean_steps_by_date$steps))
+```
 ## Are there differences in activity patterns between weekdays and weekends?
